modules-available/roomplanner/style.css
@CHARSET "UTF-8";

/* override style to make the room planner full screen */

body {
	width: 100%;
	height: 100%;
	margin: 0;
}

.sidebar-bg, .navbar {
	display: none;
}

#mainpage {
	position: static;
	width: 100%;
	max-width: 100%;
	left: 0px;
	top: 0px;
	margin: 0;
}

/* end full screen changes */

#drawpanel {
	position:relative;}

#drawarea {
	background: url('images/grid_100_sep.png');
	background-size: 100px 100px;}

#drawpanel .panel-body {
	padding:0;
	margin: 0;
	overflow: hidden;
	height: 600px;
}

#scaleContainer {
	position: absolute;
	bottom: 5px;
	right: 30px;
	width: 15%;
	z-index:1000;
	}

#scaleslider {
	position:relative;}

#zoom-out, #zoom-in {
	cursor:pointer;
}


#scaleContainer .glyphicon {
	position: absolute;
	top: -2px;
	font-size: 1.1em;}

#scaleContainer .glyphicon-zoom-out {
	left:-20px;}

#scaleContainer .glyphicon-zoom-in {
	right:-20px; }


[itemlook="computer"] { background: url('images/computer/computer.png') no-repeat;}


[itemlook="door-nw"] { background: url('images/wall/door-nw.png') no-repeat;}
[itemlook="door-ne"] { background: url('images/wall/door-ne.png') no-repeat;}
[itemlook="door-sw"] { background: url('images/wall/door-sw.png') no-repeat;}
[itemlook="door-se"] { background: url('images/wall/door-se.png') no-repeat;}
[itemlook="door-en"] { background: url('images/wall/door-en.png') no-repeat;}
[itemlook="door-es"] { background: url('images/wall/door-es.png') no-repeat;}
[itemlook="door-wn"] { background: url('images/wall/door-wn.png') no-repeat;}
[itemlook="door-ws"] { background: url('images/wall/door-ws.png') no-repeat;}

[itemlook="copier"] {
	background: url('images/electricalDevices_wIP/copier.png') no-repeat;
	}

/*
[itemlook="pc"] {
	background: url('images/electricalDevices_wIP/pc.png') no-repeat;
	z-index:100;
	}
*/
[itemlook="pc-east"] {
	background: url('images/electricalDevices_wIP/pc_east.png') no-repeat;
	}

[itemlook="pc-south"] {
	background: url('images/electricalDevices_wIP/pc_south.png') no-repeat;
	}

[itemlook="pc-west"] {
	background: url('images/electricalDevices_wIP/pc_west.png') no-repeat;
	}

[itemlook="pc-north"] {
	background: url('images/electricalDevices_wIP/pc_north.png') no-repeat;

	}

[itemlook="printer"] {
	background: url('images/electricalDevices_wIP/printer.png') no-repeat;

	}

[itemlook="telephone"] {
	background: url('images/electricalDevices_wIP/telephone.png') no-repeat;

	}

[itemlook="flatscreen"] {
	background: url('images/electricalDevices_woIP/flatscreen.png') no-repeat;

	}

[itemlook="lamp"] {
	background: url('images/electricalDevices_woIP/lamp.png') no-repeat;

	}

[itemlook="tvcamera"] {
	background: url('images/electricalDevices_woIP/tvcamera.png') no-repeat;

	}

[itemlook="4chairs1squaretable"] {
	background: url('images/furniture/4chairs1squaretable.png') no-repeat;

	}

/*
[itemlook="6chairs1table"] {
	background: url('images/furniture/6chairs1table.png') no-repeat;

	}
*/

[itemlook="6chairs1table-horizontal"] {
	background: url('images/furniture/6chairs1table_horizontal.png') no-repeat;

	}

[itemlook="6chairs1table-vertical"] {
	background: url('images/furniture/6chairs1table_vertical.png') no-repeat;

	}

/*
[itemlook="8chairs1conferencetable"] {
	background: url('images/furniture/8chairs1conferencetable.png') no-repeat;

	}
*/


[itemlook="8chairs1conferencetable-horizontal"] {
	background: url('images/furniture/8chairs1conferencetable_horizontal.png') no-repeat;

	}


[itemlook="8chairs1conferencetable-vertical"] {
	background: url('images/furniture/8chairs1conferencetable_vertical.png') no-repeat;

	}

/*
[itemlook="armchair"] {
	background: url('images/furniture/armchair.png') no-repeat;

		}
*/

[itemlook="armchair-east"] {
	background: url('images/furniture/armchair_east.png') no-repeat;

		}

[itemlook="armchair-south"] {
	background: url('images/furniture/armchair_south.png') no-repeat;

		}

[itemlook="armchair-west"] {
	background: url('images/furniture/armchair_west.png') no-repeat;

		}

[itemlook="armchair-north"] {
	background: url('images/furniture/armchair_north.png') no-repeat;

		}

/*
[itemlook="chair"] {
	background: url('images/furniture/chair.png') no-repeat;

		}
*/

[itemlook="chair-east"] {
	background: url('images/furniture/chair_east.png') no-repeat;

		}

[itemlook="chair-south"] {
	background: url('images/furniture/chair_south.png') no-repeat;

		}

[itemlook="chair-west"] {
	background: url('images/furniture/chair_west.png') no-repeat;

		}

[itemlook="chair-north"] {
	background: url('images/furniture/chair_north.png') no-repeat;

		}

/*
[itemlook="chair2"] {
	background: url('images/furniture/chair2.png') no-repeat;

		}
*/

[itemlook="chair2-east"] {
	background: url('images/furniture/chair2_east.png') no-repeat;

		}

[itemlook="chair2-south"] {
	background: url('images/furniture/chair2_south.png') no-repeat;

		}

[itemlook="chair2-west"] {
	background: url('images/furniture/chair2_west.png') no-repeat;

		}

[itemlook="chair2-north"] {
	background: url('images/furniture/chair2_north.png') no-repeat;

		}

/*
[itemlook="classroomdesk"] {
	background: url('images/furniture/classroomdesk.png') no-repeat;

	}
*/

[itemlook="classroomdesk-east"] {
	background: url('images/furniture/classroomdesk_east.png') no-repeat;

	}

[itemlook="classroomdesk-south"] {
	background: url('images/furniture/classroomdesk_south.png') no-repeat;

	}

[itemlook="classroomdesk-west"] {
	background: url('images/furniture/classroomdesk_west.png') no-repeat;

	}

[itemlook="classroomdesk-north"] {
	background: url('images/furniture/classroomdesk_north.png') no-repeat;

	}

/*
[itemlook="classroomdeskchair"] {
	background: url('images/furniture/classroomdeskchair.png') no-repeat;

	}
*/

[itemlook="classroomdeskchair-east"] {
	background: url('images/furniture/classroomdeskchair_east.png') no-repeat;

	}

[itemlook="classroomdeskchair-south"] {
	background: url('images/furniture/classroomdeskchair_south.png') no-repeat;

	}
/* ... */

